address the comments